refactor: 삭제된 카테고리 검증 메서드 생성 및 적용